my-test/testsuite_scan/ir/SingleSource/UnitTests/Integer/sign.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Integer/sign.c:16:29: warning: unknown attribute 'bitwidth' ignored [-Wunknown-attributes]
   16 | typedef int __attribute__ ((bitwidth(24))) int24;
      |                             ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Integer/sign.c:17:38: warning: unknown attribute 'bitwidth' ignored [-Wunknown-attributes]
   17 | typedef unsigned int __attribute__ ((bitwidth(24))) uint24;
      |                                      ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Integer/sign.c:27:7: error: call to undeclared function 'rand'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   27 |   r = rand();
      |       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Integer/sign.c:34:11: error: call to undeclared function 'atoi'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   34 |     num = atoi(argv[1]);
      |           ^
2 warnings and 2 errors generated.
